@@ -8,7 +8,7 @@
     <deps purpose="run">
       <thirdpartyegg name="Babel" minversion="2.1" maxversion="2.11.999"/>
       <thirdpartyegg name="python-dateutil" minversion="2.8" maxversion="2.8.999"/>
-      <thirdpartyegg name="wrapt" minversion="1.11.0" maxversion="1.13.999"/>
+      <thirdpartyegg name="wrapt" minversion="1.11.0" maxversion="1.14.999"/>
       <thirdpartyegg name="setuptools" minversion="51.0.0"/>
       <thirdpartyegg name="pip" minversion="10.0.0"/>
       <thirdpartyegg name="toml"/>
