@@ -5,7 +5,7 @@
   </namespaces>
 
   <extras name="pillow">
-    <thirdpartyegg name="Pillow" minversion="2.5" maxversion="7.1.999"/>
+    <thirdpartyegg name="Pillow" minversion="2.5" maxversion="9.3.999"/>
   </extras>
 
   <version number="6.1">
@@ -21,7 +21,7 @@
       <egg name="reahl-paypalsupport" versionlocked="True"/>
       <thirdpartyegg name="pytest" minversion="3.0"/>
       <thirdpartyegg name="setuptools" minversion="51.0.0"/>
-      <thirdpartyegg name="plotly" minversion="5.1.0" maxversion="5.6.99999"/>
+      <thirdpartyegg name="plotly" minversion="5.1.0" maxversion="5.11.99999"/>
     </deps>
   </version>
 
