@@ -12,7 +12,7 @@ install_requires =
   reahl-sqlitesupport>=6.1,<6.2
   reahl-sqlalchemysupport>=6.1,<6.2
   reahl-web-declarative>=6.1,<6.2
-  plotly>=5.1.0,<5.6.99999
+  plotly>=5.1.0,<5.11.99999
 
 component = 
   
