@@ -6,7 +6,7 @@
   <version number="6.1">
     <deps purpose="run">
       <egg name="reahl-component" versionlocked="True"/>
-      <thirdpartyegg name="wrapt" minversion="1.11.0" maxversion="1.13.999"/>
+      <thirdpartyegg name="wrapt" minversion="1.11.0" maxversion="1.14.999"/>
     </deps>
   </version>
 
