@@ -11,11 +11,11 @@
         <thirdpartyegg name="ply" minversion="3.8" maxversion="3.11.999"/>
         <thirdpartyegg name="rjsmin" minversion="1.2.0" maxversion="1.2.999"/>
         <thirdpartyegg name="rcssmin" minversion="1.1.0" maxversion="1.1.999"/>
-        <thirdpartyegg name="beautifulsoup4" minversion="4.6" maxversion="4.10.999"/>
+        <thirdpartyegg name="beautifulsoup4" minversion="4.6" maxversion="4.11.999"/>
         <thirdpartyegg name="WebOb" minversion="1.8" maxversion="1.8.999"/>
         <thirdpartyegg name="Babel" minversion="2.1" maxversion="2.11.999"/>
         <thirdpartyegg name="setuptools" minversion="51.0.0"/>
-        <thirdpartyegg name="lxml" minversion="4.2" maxversion="4.7.999"/>
+        <thirdpartyegg name="lxml" minversion="4.2" maxversion="4.9.999"/>
       </deps>
   </version>
 
