@@ -1,7 +1,7 @@
 [options]
 tests_require =
   pytest>=3.0
-  plotly>=5.1.0,<5.6.99999
+  plotly>=5.1.0,<5.11.99999
   reahl-tofu
   reahl-stubble
   reahl-dev
