@@ -4,7 +4,7 @@
   </namespaces>
 
   <extras name="pillow">
-    <thirdpartyegg name="Pillow" minversion="2.5" maxversion="7.1.999"/>
+    <thirdpartyegg name="Pillow" minversion="2.5" maxversion="9.3.999"/>
   </extras>
 
   <version number="6.1">
@@ -13,11 +13,11 @@
         <egg name="reahl-dev" versionlocked="True"/>
         <egg name="reahl-component" versionlocked="True"/>
         <egg name="reahl-tofu" versionlocked="True"/>
-        <thirdpartyegg name="selenium" minversion="2.42" maxversion="3.141.9999"/>
-        <thirdpartyegg name="watchdog" minversion="0.8.3" maxversion="0.10.999"/>
+        <thirdpartyegg name="selenium" minversion="2.42" maxversion="4.7.9999"/>
+        <thirdpartyegg name="watchdog" minversion="0.8.3" maxversion="2.2.999"/>
         <thirdpartyegg name="WebOb" minversion="1.8" maxversion="1.8.999"/>
         <thirdpartyegg name="setuptools" minversion="51.0.0"/>
-        <thirdpartyegg name="prompt_toolkit" minversion="2.0.10" maxversion="2.0.999"/>
+        <thirdpartyegg name="prompt_toolkit" minversion="2.0.10" maxversion="3.0.999"/>
       </deps>
   </version>
 
